--- a/site/Help_Contact_Info.rdoc
+++ b/site/Help_Contact_Info.rdoc
@@ -1,5 +1,6 @@
+# @title Getting Help
 
-=Help with Visual Ruby
+= Help with Visual Ruby
 
 If you need help with visualruby, I'd be happy to answer your questions.  Just
 post your question on this forum:
