--- a/site/ListView_Tutorial.rdoc
+++ b/site/ListView_Tutorial.rdoc
@@ -1,4 +1,6 @@
-=ListView Tutorial
+# @title ListView Tutorial
+
+= ListView Tutorial
 
 
 VR::ListView offers you the abilitly to make complex listviews without having to struggle 
